# SLDL-python

./: .gitignore  README.md  install_termux.sh  libstdsky.json  package.json  pyproject.toml  run.py  setup.py  tsc.py
docs/examples/: sldl-example.skyc
examples/: .gitignore  01_simple_rw.py  objects.json  package.json
examples/json/01-simple-rw/: 01-simple-rw.js  decl.json  objects.json
examples/json/02-headers/: 02-headers.js
examples/json/04-web/: 04-web.html
sldl-frontend/: main.js  package.json
sldl-frontend/src/: exceptions.js
sldl-frontend/src/lexer/: lexer.js  token.js
sldl-frontend/src/parser/: env.js  parser.js  type.js
sldl-headers/: README.md  main.d.ts  main.js  package.json
sldl-jsonify/: main.d.ts  main.js  package.json  webpack.config.js
sldl-jsonify/src/: declGroup.js  exception.js  itanium.js  jsonValue.js
sldl-objects/: main.d.ts  main.js  package.json
sldl-objects/src/: exceptions.js  levelObjects.js
sldl-objects/src/objects/: levelObjects.js  types.js
sldl-objects/src/type/: metaType.js  metaTypeClass.js  metaTypeRaw.js  (+4 more)
sldl-preprocessor/: main.js  package.json
sldl-preprocessor/src/: errors.js  lexer.js  parser.js
sldl-utils/: main.js  package.json
sldl-utils/src/: exceptions.d.ts  exceptions.js
that-sky-compiler/: __init__.py  cli.py  frontend.py  headers.py  package.json  preprocessor.py  utils.py
that-sky-compiler/jsonify/: __init__.py  decl_group.py  exceptions.py  json_value.py
that-sky-compiler/objects/: __init__.py  binaryio.py  exceptions.py  level_objects.py  level_value.py  meta_type.py  types.py
(+32 files in other folders)
